<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView 
        android:id="@+id/findstoretip1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/find_store_tip1"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceSmall" />
            
    <AutoCompleteTextView
        android:id="@+id/find_edit"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:gravity="fill_horizontal"
         />

    <TextView
        android:id="@+id/findstoretip2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/find_store_tip2"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/findstoretip3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/find_store_tip3"
    	android:textColor="#FF0000"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</LinearLayout>
