<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/widget_storedetail"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@drawable/background"
> 


	<include android:id="@+id/comm_top" layout="@layout/top" />		
	
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:scrollbars="none"
>	
<LinearLayout  
 android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
 > 
 <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="#00000000"
    android:layout_marginTop="10dp"   
    android:layout_marginLeft="30dip"
    android:layout_marginRight="30dip"

    >
			<TextView 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textColor="#FFFFFF"

			    android:text="@string/store_addr"
				android:layout_marginLeft="1dip"
				android:layout_marginRight="1dip"
				android:layout_gravity="center_horizontal"
				android:background="@drawable/dialog_title_blue"
			    android:gravity="center_horizontal"/>
			 <LinearLayout  
			 		android:orientation="vertical"
				 	android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_horizontal"
				    android:layout_marginBottom="2dip"
					android:background="@drawable/dialog_content"
				    >
							<TextView 
								android:id="@+id/store_addr"
							    android:layout_width="fill_parent"
							    android:layout_height="wrap_content"
							    android:layout_gravity="center_horizontal"
							    android:textColor="#000000"
 
 							    android:text=""
							    android:layout_marginTop="3dip"
							    android:layout_marginLeft="5dip"
							    android:layout_marginRight="5dip"
							    android:background="#00000000"
							    android:gravity="center_horizontal"  />
							<TextView 
								android:id="@+id/store_addr1"
							    android:layout_width="fill_parent"
							    android:layout_height="wrap_content"
							    android:textColor="#000000"

							    android:text=""
							    android:layout_marginTop="3dip"
							    android:layout_marginLeft="5dip"
							    android:layout_marginRight="5dip"
							    android:background="#00000000"
							    android:gravity="center_horizontal"/>
							<TextView 
								android:id="@+id/store_addr2"
							    android:layout_width="fill_parent"
							    android:layout_height="wrap_content"
							    android:textColor="#000000"

							    android:text=""
							    android:layout_marginTop="3dip"
							    android:layout_marginBottom="3dip"
							    android:layout_marginLeft="5dip"
							    android:layout_marginRight="5dip"
							    android:background="#00000000"
							    android:gravity="center_horizontal"/>
				</LinearLayout>
 </LinearLayout>
 
 
 
 
 
 <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="#00000000"
    android:layout_marginTop="10dp"   
    android:layout_marginLeft="30dip"
    android:layout_marginRight="30dip"

    >
			<TextView 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textColor="#FFFFFF"

			    android:text="@string/store_hours"
				android:layout_marginLeft="1dip"
				android:layout_marginRight="1dip"
				android:layout_gravity="center_horizontal"
				android:background="@drawable/dialog_title_red"
			    android:gravity="center_horizontal"/>
			 <LinearLayout  
			 		android:orientation="vertical"
				 	android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_horizontal"
				    android:layout_marginBottom="2dip"
					android:background="@drawable/dialog_content"
				    >
							<TextView 
								android:id="@+id/store_hours"
							    android:layout_width="fill_parent"
							    android:layout_height="wrap_content"
							    android:layout_gravity="center_horizontal"
							    android:textColor="#000000"

							    android:text=""
							    android:layout_marginTop="3dip"
							    android:layout_marginLeft="5dip"
							    android:layout_marginRight="5dip"
							    android:background="#00000000"
							    android:gravity="center_horizontal"  />
							
				</LinearLayout>
 </LinearLayout>
 
	
		
	
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/widgetdetail_3"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:layout_marginTop="20dip"
	>
 			<Button android:id="@+id/call" 
			android:text="@string/BUTTON_CALL" 
			android:layout_width="130dp" android:layout_height="wrap_content"
			android:textStyle="bold" android:textColor="#FFFFFF"
			android:background="@drawable/most_button"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
			android:textSize="13sp"
			/>
			
 			<Button android:id="@+id/directions" 
			android:text="@string/BUTTON_DIRECTIONS" 
			android:layout_width="130dp" android:layout_height="wrap_content"
			android:textStyle="bold" android:textColor="#FFFFFF"
			android:background="@drawable/most_button"
			android:textSize="13sp"
			/>
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/widgetdetail_4"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:layout_marginTop="20dip"
	>
 			<Button android:id="@+id/localcoupons" 
			android:text="@string/BUTTON_LOCALCOUPONS" 
			android:layout_width="130dp" android:layout_height="wrap_content"
			android:textStyle="bold" android:textColor="#FFFFFF"
			android:background="@drawable/most_button"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
			android:textSize="13sp"
			/>
			
 			<Button android:id="@+id/localflyers" 
			android:text="@string/BUTTON_LOCALFLYERS" 
			android:layout_width="130dp" android:layout_height="wrap_content"
			android:textStyle="bold" android:textColor="#FFFFFF"
			android:background="@drawable/most_button"
			android:textSize="13sp"
			/>
	</LinearLayout>	
	</LinearLayout>
	</ScrollView>
</LinearLayout>

